test/events/invalidValues/isPrepend.js
export const eventHandler = {
    name: 1,
    isOnce: false,
    execute: async function () {},
};
